# CPP_DevKit2

./: CMakeLists.txt  CPP_DevKit.cpp  Doxyfile2  Doxyfile_cnf  README.md
src/: CMakeLists.txt  documention.dox
src/color/: color_palette.h
src/device/: CMakeLists.txt
src/device/DHT11/: CMakeLists.txt  dht11.cpp  dht11.h  rtos_dht11.cpp  rtos_dht11.h
src/device/HC_SR04/: CMakeLists.txt  hc_sr04.cpp  hc_sr04.h  rtos_hc_sr04.cpp  rtos_hc_sr04.h
src/device/KY040/: ky040.cpp
src/device/MPU6050/: mpu6050.cpp
src/device/MSGEQ7/: msgeq7.cpp
src/device/SG90/: sg90.cpp
src/device/SSD1306/: CMakeLists.txt  ssd1306.cpp  ssd1306.h
src/device/ST7735/: CMakeLists.txt  commands_ST7735.h  st7735.cpp  st7735.h
src/device/rotary_encoder/: CMakeLists.txt  rotary_encoder.cpp  rotary_encoder.h  rtos_rotary_encoder.cpp  rtos_rotary_encoder.h
src/device/switch_button/: CMakeLists.txt  rtos_switch_button.cpp  rtos_switch_button.h  switch_button.cpp
src/device_DHT11/: CMakeLists.txt  dht11.cpp
src/device_HC_SR04/: CMakeLists.txt  hc_sr04.cpp
src/device_KY040/: CMakeLists.txt  ky040.cpp  ky040.h
src/device_MPU6050/: CMakeLists.txt  mpu6050.cpp  mpu6050.h
src/device_MSGEQ7/: CMakeLists.txt
src/device_SG90/: CMakeLists.txt  sg90.cpp  sg90.h
src/device_rotary_encoder/: CMakeLists.txt  rotary_encoder.cpp  rotary_encoder.h
src/device_ssd1306/: CMakeLists.txt  ssd1306.cpp  ssd1306.h
src/device_switch_button/: CMakeLists.txt  switch_button.cpp  switch_button.h
src/docs/html/: graph_legend.html  index.html  navtreedata.js
src/hardware_I2C/: CMakeLists.txt
src/hw/: CMakeLists.txt
src/hw/dma/: CMakeLists.txt  hw_dma.cpp  hw_dma.h
src/hw/i2c/: CMakeLists.txt  hw_i2c.cpp  hw_i2c.h  rtos_hw_i2c.cpp  rtos_hw_i2c.h
src/hw/pwm/: hw_pwm.cpp
src/hw/spi/: CMakeLists.txt  hw_spi.cpp  hw_spi.h  rtos_hw_spi.cpp  rtos_hw_spi.h
src/hw_I2C/: CMakeLists.txt  hw_i2c.cpp
src/hw_PWM/: hw_pwm.cpp
src/sw/: CMakeLists.txt
src/sw/display_device/: display_device.cpp  display_device.h
src/sw/ui_core/: CMakeLists.txt  rtos_ui_core.cpp  rtos_ui_core.h  ui_control_event.h  ui_core.cpp  ui_core.h
src/sw/widget/: CMakeLists.txt  canvas.cpp  canvas.h  rtos_widget.cpp  rtos_widget.h  widget.cpp  widget.h  widget_primitives.cpp  widget_primitives.h
src/sw/widget_bar_graph/: widget_bargraph.cpp
src/sw/widget_bargraph/: widget_bargraph.cpp  widget_bargraph.h
src/sw/widget_horizontal_bar/: widget_horizontal_bar.cpp  widget_horizontal_bar.h
src/sw/widget_square_led/: widget_square_led.cpp  widget_square_led.h
src/sw_display_device/: CMakeLists.txt  display_device.cpp
src/sw_framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h
src/sw_ui_core/: CMakeLists.txt  ui_core.cpp  ui_core.h
src/sw_widget/: CMakeLists.txt  widget.cpp  widget.h
src/sw_widget_bargraph/: CMakeLists.txt  widget_bargraph.cpp  widget_bargraph.h
src/sw_widget_focus_indicator/: CMakeLists.txt  widget_focus_indicator.cpp  widget_focus_indicator.h
src/sw_widget_horizontal_bar/: CMakeLists.txt  widget_horizontal_bar.cpp  widget_horizontal_bar.h
src/sw_widget_horizontal_bargraph/: CMakeLists.txt  widget_horizontal_bargraph.cpp
src/sw_widget_square_led/: CMakeLists.txt  widget_square_led.cpp  widget_square_led.h
src/sw_widget_text/: CMakeLists.txt  widget_text.cpp
src/utilities/: CMakeLists.txt
src/utilities/probe/: probe.cpp  probe.h
src/utilities_debug_probe/: CMakeLists.txt
test_freeRTOS/test_IRQ/: CMakeLists.txt  test_rtos_gpio_irq.cpp  test_rtos_irq.cpp  test_rtos_switch_button.cpp  test_rtos_switch_button_irq.cpp
tests/: CMakeLists.txt  test_SG90.cpp  test_dht.cpp  test_graphic_framebuffer.cpp  test_graphic_primitives.cpp  test_hc_sr04.cpp  test_horizontal_bar.cpp  test_horizontal_bargraph.cpp  test_i2c_bus_scan.cpp  test_i2c_xchange.cpp  test_ky040.cpp  test_managed_horizontal_bar.cpp  test_managed_square_led.cpp  test_mpu6050.cpp  test_mpu6050_irq.cpp  test_msgeq7.cpp  test_pwm.cpp  test_pwm_duty.cpp  test_pwm_irq.cpp  test_rotary_encoder.cpp  test_square_led.cpp  test_ssd1306_device.cpp  test_ssd1306_fb_streams.cpp  test_switch_button_irq.cpp  test_text_and_graph_framebuffer.cpp  test_text_and_graph_widgets.cpp  test_text_framebuffer.cpp  test_text_primitives.cpp  test_textual_widget.cpp  test_tuning_dial.cpp  test_ui_core.cpp  test_vertical_bargraph.cpp
tests/device/: CMakeLists.txt
tests/device/DHT11/: CMakeLists.txt  test_dht11.cpp  test_rtos_dht11.cpp
tests/device/HC_SR04/: CMakeLists.txt  test_hc_sr04.cpp  test_rtos_hc_sr04.cpp
tests/device/KY040/: test_ky040.cpp
tests/device/MPU6050/: test_mpu6050.cpp  test_mpu6050_irq.cpp
tests/device/MSGEQ7/: test_msgeq7.cpp
tests/device/SG90/: test_SG90.cpp
tests/device/SSD1306/: CMakeLists.txt  test_rtos_ssd1306_device.cpp  test_ssd1306_device.cpp
tests/device/ST7735/: CMakeLists.txt  test_st7735_device.cpp
tests/device/rotary_encoder/: CMakeLists.txt  test_rotary_encoder.cpp  test_rtos_rotary_encoder.cpp
tests/device/switch_button/: CMakeLists.txt  test_rtos_switch_button.cpp  test_switch_button_irq.cpp
tests/dht11/: CMakeLists.txt  test_dht11.cpp
tests/hw/: CMakeLists.txt
tests/hw/dma/: CMakeLists.txt  hello_dma.cpp  mem2mem.cpp  mem2mem_via_i2c.cpp  (+2 more)
tests/sw/: CMakeLists.txt
tests/test_managed_horizontal_bar/: t_managed_horizontal_bar_manager.cpp  t_managed_horizontal_bar_models.cpp  t_managed_horizontal_bar_widgets.cpp  test_managed_horizontal_bar.cpp
tests/test_managed_square_led/: t_managed_square_led_manager.cpp  t_managed_square_led_models.cpp  t_managed_square_led_widgets.cpp  test_managed_square_led.cpp
tests/test_square_led/: t_square_led_model.cpp  t_square_led_widget.cpp  t_switch_button_controller.cpp  test_square_led.cpp
tests/test_text_widget/: t_test_text_widget.cpp
tests/test_tuning_dial/: t_tuning_dial_model.cpp  t_tuning_dial_widget.cpp  test_tuning_dial.cpp
tests/test_ui_core/: t_controlled_value.cpp  t_controlled_value.h  t_manager.cpp  t_manager.h  t_widget_on_serial_monitor.cpp  t_widget_on_serial_monitor.h  test_ui_core.cpp
tests/utilities/: CMakeLists.txt
(+3109 files in other folders)
