set(CPP_DEVKIT_SRC ${CMAKE_CURRENT_LIST_DIR}/src)
message( "CPP_DEVKIT_SRC----> ${CPP_DEVKIT_SRC}")
file(GLOB ALL_ITEMS LIST_DIRECTORIES true  ${CPP_DEVKIT_SRC} *  )
foreach(ITEM ${ALL_ITEMS})
    if(IS_DIRECTORY ${ITEM})
        message( STATUS "---->found dir : ${ITEM}")
        add_subdirectory(${ITEM})
    endif()
endforeach(ITEM)
