include_directories(${PROJECT_SOURCE_DIR}/src)

file(GLOB ALL_ITEMS LIST_DIRECTORIES true  ${CMAKE_CURRENT_LIST_DIR}/*  )
foreach(ITEM ${ALL_ITEMS})
    if(IS_DIRECTORY ${ITEM})
        get_filename_component(SHORT_NAME ${ITEM} NAME)
        message( STATUS "----> library dir : ${SHORT_NAME}")
        add_subdirectory(${SHORT_NAME})
    endif()
endforeach(ITEM)
